objects/ASI_KOR_NSD_Payment_Settlement_Header__c.object
<CustomObject>
    <description>For PRK Phase 2</description>
    <fields>
        <fullName>ASI_KOR_CA_Amount_Pending__c</fullName>
        <label>CA Amount (Pending)</label>
        <summarizedField>ASI_KOR_NSD_Payment_Settlement_By_Brand__c.ASI_KOR_CA_Amount_Pending__c</summarizedField>
        <summaryForeignKey>ASI_KOR_NSD_Payment_Settlement_By_Brand__c.ASI_KOR_NSD_Payment_Settlement_Header__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_CA_Amount_excl_Basic__c</fullName>
        <label>CA Amount (excl. Basic)</label>
        <summarizedField>ASI_KOR_NSD_Payment_Settlement_By_Brand__c.ASI_KOR_Total_CA_Amount_excl_Basic__c</summarizedField>
        <summaryForeignKey>ASI_KOR_NSD_Payment_Settlement_By_Brand__c.ASI_KOR_NSD_Payment_Settlement_Header__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Comments__c</fullName>
        <label>Final Comments (NSD)</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Delegated_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Delegated Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ASI_KOR_NSD_Payment_Settlement_Headers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Final_Basic_Amount__c</fullName>
        <label>Final VI</label>
        <summarizedField>ASI_KOR_NSD_Payment_Settlement_By_Brand__c.ASI_KOR_Total_Final_Basic__c</summarizedField>
        <summaryForeignKey>ASI_KOR_NSD_Payment_Settlement_By_Brand__c.ASI_KOR_NSD_Payment_Settlement_Header__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Final_CA_Amount_excl_Basic__c</fullName>
        <label>Final CA Amount (excl. Basic)</label>
        <summarizedField>ASI_KOR_NSD_Payment_Settlement_By_Brand__c.ASI_KOR_Total_Final_CA_Amount_excl_Basic__c</summarizedField>
        <summaryForeignKey>ASI_KOR_NSD_Payment_Settlement_By_Brand__c.ASI_KOR_NSD_Payment_Settlement_Header__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Final_Total_Amount__c</fullName>
        <formula>ASI_KOR_Final_Basic_Amount__c + ASI_KOR_Final_CA_Amount_excl_Basic__c + ASI_KOR_Pre_Payment_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Final Total Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Month__c</fullName>
        <label>Month</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_No_of_Regions__c</fullName>
        <label>No. of Regions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_No_of_Sumitted_Regions__c</fullName>
        <label>No. of Sumitted Regions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Pre_Payment_Amount__c</fullName>
        <label>Pre-Payment Amount</label>
        <summarizedField>ASI_KOR_NSD_Payment_Settlement_By_Brand__c.ASI_KOR_Pre_Payment_Amount__c</summarizedField>
        <summaryForeignKey>ASI_KOR_NSD_Payment_Settlement_By_Brand__c.ASI_KOR_NSD_Payment_Settlement_Header__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_SYS_Cut_off_Date__c</fullName>
        <label>Cut-off Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_SYS_TMKT_Email__c</fullName>
        <label>SYS TMKT Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>Final Approved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_KOR_Total_Branch_Budget__c</fullName>
        <label>Total National Budget</label>
        <summarizedField>ASI_KOR_NSD_Payment_Settlement_By_Brand__c.ASI_KOR_CA_Budget__c</summarizedField>
        <summaryForeignKey>ASI_KOR_NSD_Payment_Settlement_By_Brand__c.ASI_KOR_NSD_Payment_Settlement_Header__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Total_VI_Pending__c</fullName>
        <label>Total VI (Pending)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Year__c</fullName>
        <label>Year</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Payment Settlement (NSD)</label>
    <listViews>
        <fullName>ASI_KOR_Waiting_for_Approval</fullName>
        <columns>NAME</columns>
        <columns>ASI_KOR_Year__c</columns>
        <columns>ASI_KOR_Month__c</columns>
        <columns>ASI_KOR_Status__c</columns>
        <columns>ASI_KOR_No_of_Regions__c</columns>
        <columns>ASI_KOR_No_of_Sumitted_Regions__c</columns>
        <columns>ASI_KOR_Final_Basic_Amount__c</columns>
        <columns>ASI_KOR_Final_Total_Amount__c</columns>
        <columns>ASI_KOR_Total_Branch_Budget__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ASI_KOR_Status__c</field>
            <operation>equals</operation>
            <value>Draft</value>
        </filters>
        <label>Waiting for Approval</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ASI_KOR_Year__c</columns>
        <columns>ASI_KOR_Month__c</columns>
        <columns>ASI_KOR_Status__c</columns>
        <columns>ASI_KOR_No_of_Regions__c</columns>
        <columns>ASI_KOR_No_of_Sumitted_Regions__c</columns>
        <columns>ASI_KOR_Final_Basic_Amount__c</columns>
        <columns>ASI_KOR_Final_Total_Amount__c</columns>
        <columns>ASI_KOR_Total_Branch_Budget__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>NPS-{00000000}</displayFormat>
        <label>NSD Payment Settlement</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payment Settlements (NSD)</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>